--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start:dev": "nodemon --exec ./node_modules/.bin/babel-node src/index.js",
-    "start": "node src/index.js",
+    "start": "node build/index.js",
     "build": "babel src --out-dir build",
     "dev": "node build/index.js",
     "test": "jest"
